--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -138,7 +138,7 @@
     </div>
 
 
-    <div class="container" style="margin-top: -10%;">
+    <div class="container" style="margin-top: -10%; border-bottom: solid #c1bfbf;">
       <div class="row">
         <div class="col-md-8">
 
@@ -236,57 +236,54 @@
 
 <!----FOOTER----->
 
-<footer class="footer-distributed" style="background-image: url('assets/img/olongapo-city.webp');">
+<section class="footer-distributed" style="background-image: url('assets/img/olongapo-city.webp');">
 
-  <div class="footer-left">
 
-    <p class="footer-links">
-      <a href="#">Home</a> ·
-      <a href="#">About</a> ·
-      <a href="#">Pricing</a> ·
-      <a href="#">About</a> ·
-      <a href="#">Faq</a> ·
-      <a href="#">Contact</a>
-    </p>
-  </div>
 
   <div class="footer-center">
 
+    <p class="text-uppercase fw-bold">for inquiries / complaints</p>
+    <h2>CONTACTS</h2><br>
+    <p class="text-uppercase fw-bold">rizal ave, olongapo city, 2200 zambales</p>
+    <h2>(047) 222 2565</h2>
+
+    <p class="text-uppercase fw-bold">Locate us</p>
+  </div><br><br>
+
+  <div class="socmed-icons">
+    <i class="bi bi-facebook" style="font-size: 2.5rem; color: #173015;"></i>
+    <i class="bi bi-youtube" style="font-size: 2.5rem; color: #173015;"></i>
+    <i class="bi bi-instagram" style="font-size: 2.5rem; color: #173015;"></i>
+    <i class="bi bi-twitter" style="font-size: 2.5rem; color: #173015;"></i>
   </div>
 
-</footer>
-
-
-
-<section class="h-100 w-100 bg-success">
-  
 </section>
-<!-- <footer class="text-lg-start w-100" style="background-color: #93d266; color: #f1f1f1;">
-  <div class="row">
-    <p>FOR INQUIRIES / COMPLAINTS</p>
-    <h1 class="text-uppercase">contacts</h1>
-  </div>
-  <p>RIZAL AVE, OLONGAPO CITY, 2200 ZAMBALES</p>
-  <h2 class="text-uppercase">(047) 222 2565</h2>
 
 
-  <div class="text-center p-3" style="color: #f1f1f1;">
-    Copyright @ 2023 OLONGAPO CITY All rights reserved
 
-    <ul class="list-unstyled mb-0">
-      <li>
-        <a href="#!" class="text-white">Link 1</a>
-      </li>
-      <li>
-        <a href="#!" class="text-white">Link 2</a>
-      </li>
-      <li>
-        <a href="#!" class="text-white">Link 3</a>
-      </li>
-      <li>
-        <a href="#!" class="text-white">Link 4</a>
-      </li>
-    </ul>
-  </div>
+<footer>
 
-</footer> -->
+  <div class="footer-left">
+  
+    <nav class="navbar navbar-expand-lg navbar-light fw-bold" style="background-color: #1c3b19;">
+      <p>Copyright @ 2023 OLONGAPO CITY All rights reserved</p>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#" style="color: #f1f1f1;">home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #f1f1f1;">courses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #f1f1f1;">news</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #f1f1f1;">about</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #f1f1f1;">support</a>
+        </li>      
+</ul>
+</nav>
+</div>
+</footer>
